fix(onboarding-layout-ui): Added input borders and adjusted spacing

--- a/app/components/Onboarding/ConnectionType.scss
+++ b/app/components/Onboarding/ConnectionType.scss
@@ -4,7 +4,7 @@
   color: $white;
 
   section {
-    margin: 30px 0;
+    margin: 0;
 
     &.option {
       .button {
